--- a/tg-cms/src/main/resources/messages/messages.properties
+++ b/tg-cms/src/main/resources/messages/messages.properties
@@ -1,3 +1,4 @@
+########## customer config ##########
 customer.systemName=\u56fe\u7075\u8c37\u5185\u5bb9\u7ba1\u7406\u53d1\u5e03\u7cfb\u7edf 
 customer.systemTitle=\u56fe\u7075\u8c37\u5185\u5bb9\u7ba1\u7406\u53d1\u5e03\u7cfb\u7edf 
 customer.loginTtile=\u56fe\u7075\u8c37\u5185\u5bb9\u7ba1\u7406\u53d1\u5e03\u7cfb\u7edf 
@@ -6,11 +7,19 @@ customer.copyText=\u56fe\u7075\u8c37\uff08\u5317\u4eac\uff09\u79d1\u6280\u6709\u
 customer.systemVerson=2.0.1
 
 ########## field config ##########
-common.field.max=max value is {max}\!
-common.field.email=must like **@**.**
-common.field.length.illegal=length must between {min}-{max}\!
-common.field.min=max value is {min}\!
-common.field.empty=filed can not be empty\!
-common.field.illegal=field is illegal\!
-common.field.range=must between {min}-{max}\!
-common.field.null=filed can not be null\!
+javax.validation.constraints.AssertFalse.message = \u53ea\u80fd\u4e3afalse
+javax.validation.constraints.AssertTrue.message  = \u53ea\u80fd\u4e3atrue
+javax.validation.constraints.DecimalMax.message  = \u5fc5\u987b\u5c0f\u4e8e\u6216\u7b49\u4e8e{value}
+javax.validation.constraints.DecimalMin.message  = \u5fc5\u987b\u5927\u4e8e\u6216\u7b49\u4e8e{value}
+javax.validation.constraints.Digits.message      = \u6570\u5b57\u7684\u503c\u8d85\u51fa\u4e86\u5141\u8bb8\u8303\u56f4(\u53ea\u5141\u8bb8\u5728{integer}\u4f4d\u6574\u6570\u548c{fraction}\u4f4d\u5c0f\u6570\u8303\u56f4\u5185)
+javax.validation.constraints.Future.message      = \u9700\u8981\u662f\u4e00\u4e2a\u5c06\u6765\u7684\u65f6\u95f4
+javax.validation.constraints.Max.message         = \u6700\u5927\u4e0d\u80fd\u8d85\u8fc7{value}
+javax.validation.constraints.Min.message         = \u6700\u5c0f\u4e0d\u80fd\u5c0f\u4e8e{value}
+javax.validation.constraints.NotNull.message     = \u4e0d\u80fd\u4e3anull
+javax.validation.constraints.Null.message        = \u5fc5\u987b\u4e3anull
+javax.validation.constraints.Past.message        = \u9700\u8981\u662f\u4e00\u4e2a\u8fc7\u53bb\u7684\u65f6\u95f4
+javax.validation.constraints.Pattern.message     = \u9700\u8981\u5339\u914d\u6b63\u5219\u8868\u8fbe\u5f0f"{regexp}"
+javax.validation.constraints.Size.message        = \u4e2a\u6570\u5fc5\u987b\u5728{min}\u548c{max}\u4e4b\u95f4
+
+org.apache.bval.constraints.NotEmpty.message=\u4e0d\u80fd\u4e3a\u7a7a
+org.apache.bval.constraints.Email.message=\u4e0d\u662f\u6b63\u786e\u7684\u90ae\u7bb1\u683c\u5f0f
