--- a/tg-cms/src/main/resources/messages/messages_zh_CN.properties
+++ b/tg-cms/src/main/resources/messages/messages_zh_CN.properties
@@ -7,14 +7,22 @@ customer.copyText=\u56fe\u7075\u8c37\uff08\u5317\u4eac\uff09\u79d1\u6280\u6709\u
 customer.systemVerson=0.9.9
 
 ########## field config ##########
-common.field.max=\u6700\u5927\u503c\u4e3a{max}\uff01
-common.field.email=\u9700\u8981**@**.**\u8fd9\u6837\u7684\u683c\u5f0f\uff01
-common.field.length.illegal=\u957f\u5ea6\u5fc5\u987b\u5728{min}-{max}\u4e4b\u95f4\uff01
-common.field.min=\u6700\u5c0f\u503c\u4e3a{min}\uff01
-common.field.empty=\u5b57\u6bb5\u4e0d\u80fd\u4e3a\u7a7a\uff01
-common.field.illegal=\u4e0d\u5408\u6cd5\uff01
-common.field.range=\u5fc5\u987b\u5728{min}-{max}\u4e4b\u95f4\uff01
-common.field.null=\u5b57\u6bb5\u4e0d\u80fd\u4e3anull\uff01
+javax.validation.constraints.AssertFalse.message = \u53ea\u80fd\u4e3afalse
+javax.validation.constraints.AssertTrue.message  = \u53ea\u80fd\u4e3atrue
+javax.validation.constraints.DecimalMax.message  = \u5fc5\u987b\u5c0f\u4e8e\u6216\u7b49\u4e8e{value}
+javax.validation.constraints.DecimalMin.message  = \u5fc5\u987b\u5927\u4e8e\u6216\u7b49\u4e8e{value}
+javax.validation.constraints.Digits.message      = \u6570\u5b57\u7684\u503c\u8d85\u51fa\u4e86\u5141\u8bb8\u8303\u56f4(\u53ea\u5141\u8bb8\u5728{integer}\u4f4d\u6574\u6570\u548c{fraction}\u4f4d\u5c0f\u6570\u8303\u56f4\u5185)
+javax.validation.constraints.Future.message      = \u9700\u8981\u662f\u4e00\u4e2a\u5c06\u6765\u7684\u65f6\u95f4
+javax.validation.constraints.Max.message         = \u6700\u5927\u4e0d\u80fd\u8d85\u8fc7{value}
+javax.validation.constraints.Min.message         = \u6700\u5c0f\u4e0d\u80fd\u5c0f\u4e8e{value}
+javax.validation.constraints.NotNull.message     = \u4e0d\u80fd\u4e3anull
+javax.validation.constraints.Null.message        = \u5fc5\u987b\u4e3anull
+javax.validation.constraints.Past.message        = \u9700\u8981\u662f\u4e00\u4e2a\u8fc7\u53bb\u7684\u65f6\u95f4
+javax.validation.constraints.Pattern.message     = \u9700\u8981\u5339\u914d\u6b63\u5219\u8868\u8fbe\u5f0f"{regexp}"
+javax.validation.constraints.Size.message        = \u4e2a\u6570\u5fc5\u987b\u5728{min}\u548c{max}\u4e4b\u95f4
+
+org.apache.bval.constraints.NotEmpty.message=\u4e0d\u80fd\u4e3a\u7a7a
+org.apache.bval.constraints.Email.message=\u4e0d\u662f\u6b63\u786e\u7684\u90ae\u7bb1\u683c\u5f0f
 
 ########## spring security ##########
 AbstractLdapAuthenticationProvider.emptyPassword=\u8ba4\u8bc1\u4fe1\u606f\u4e0d\u6b63\u786e
